--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -27,6 +27,9 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn -B package --file pom.xml
+    - name: Execute Jar File
+      run: sudo kill -9 `sudo lsof -t -i:80` & sudo java -jar /home/atanu/actions-runner/_work/hello-github-actions/hello-github-actions/target/demo-0.0.1-SNAPSHOT.jar &
+
 
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
     #- name: Update dependency graph
