--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,14 @@
+# Server port configuration
 server.port=80
-management.endpoints.web.exposure.include=prometheus
 
+# Management endpoints exposure
+management.endpoints.web.exposure.include=*
+
+# Base path for management (actuator) endpoints
+management.endpoints.web.base-path=/actuator
+
+# Enable Prometheus endpoint
+management.endpoints.prometheus.enabled=true
+
+# Enable metrics endpoint
+management.endpoints.metrics.enabled=true
